# Speech-and-Vision-Integrated-Robotic-Arm

./: README.md
robotic_arm/: CMakeLists.txt  package.xml
robotic_arm/launch/: view_robot.launch.py
robotic_arm/meshes/: base-link-arm.stl  elbow-arm.stl  grip-base.stl  grip-gl.stl  grip-gr.stl  grip-hl.stl  grip-hr.stl  grip-sp.stl  rot-base-arm.stl  shoulder-arm.stl
robotic_arm/urdf/: arm_v01.urdf.xacro
speech-nlu/: Llama-test-score.txt  llama-nlu-v01.py  plain-whisper.py  requirement.txt  term-out.txt  whisper-speech-nlu-v01.py
